--- a/apps_product_creator/views/view_odoo_module.xml
+++ b/apps_product_creator/views/view_odoo_module.xml
@@ -5,8 +5,8 @@ Copyright (C) 2016-Today: Odoo Community Association (OCA)
 License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
 -->
 <odoo>
-
-    <record id="view_odoo_module_form" model="ir.ui.view">
+    <record id="odoo_module_form_view" model="ir.ui.view">
+        <field name="name">odoo.module.form (in github_product_creator)</field>
         <field name="model">odoo.module</field>
         <field name="inherit_id" ref="github_connector_odoo.view_odoo_module_form"/>
         <field name="arch" type="xml">
@@ -15,5 +15,4 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
             </xpath>
         </field>
     </record>
-
 </odoo>
