--- a/apps_product_creator/views/view_product_product.xml
+++ b/apps_product_creator/views/view_product_product.xml
@@ -4,9 +4,7 @@
 <odoo>
 
     <record id="product_product_form_view" model="ir.ui.view">
-        <field name="name">product.product.form (in github_product_creator)</field>
         <field name="model">product.product</field>
-        <field name="priority" eval="100"/>
         <field name="inherit_id" ref="product.product_normal_form_view"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
@@ -14,16 +12,18 @@
                     <group>
                         <group>
                             <field name="odoo_module_version_id"/>
-                            <field name="author"/>
-                            <field name="license"/>
-                            <field name="website"/>
+                            <field name="app_author_ids" widget="many2many_tags"/>
+                            <field name="app_website"/>
+                            <field name="app_license_id"/>
                         </group>
                         <group>
-                            <field name="summary"/>
-                            <field name="description_rst"/>
-                            <field name="version"/>
-                            <field name="github_url"/>
+                            <field name="app_summary"/>
+                            <field name="app_version"/>
+                            <field name="app_github_url"/>
                         </group>
+                    </group>
+                    <group col="4">
+                        <field name="app_description_rst_html" colspan="4" nolabel="1" class="oe_styling_v8"/>
                     </group>
                 </page>
             </xpath>
