--- a/apps_product_creator/views/view_odoo_module.xml
+++ b/apps_product_creator/views/view_odoo_module.xml
@@ -10,8 +10,8 @@
                 <field name="product_template_id"/>
             </xpath>
             <xpath expr="//div[@name='button_box']" position="inside">
-                <button type="object" class="oe_stat_button" icon="fa-arrows-v" name="action_view_rel_products" attrs="{'invisible': [('rel_product_count', '=', 0)]}">
-                    <field name="rel_product_count" string="Products" widget="statinfo"/>
+                <button type="object" class="oe_stat_button" icon="fa-arrows-v" name="action_view_products" attrs="{'invisible': [('product_qty', '=', 0)]}">
+                    <field name="product_qty" string="Products" widget="statinfo"/>
                 </button>
             </xpath>
         </field>
