--- a/website_apps_store/views/templates.xml
+++ b/website_apps_store/views/templates.xml
@@ -55,28 +55,29 @@
         </template>
 
         <template id="products_item_customize" inherit_id="website_sale.products_item">
+            <xpath expr="//section" position="attributes">
+                <attribute name="t-att-style">'padding-bottom: 1px;' if product.odoo_module_id else ''</attribute>
+            </xpath>
             <xpath expr="//h5" position="attributes">
-                <attribute name="t-att-style">'padding-bottom: 30px;' if product.odoo_module_id else ''</attribute>
+                <attribute name="t-att-style">'margin-bottom: 4px;' if product.odoo_module_id else ''</attribute>
+            </xpath>
+            <xpath expr="//h5//a" position="after">
+                <t t-if="product.odoo_module_id and product.product_variant_ids">
+                    <br/>
+                    <t t-set="author_ids" t-value="product.get_author_details()"/>
+                    <span t-esc="', '.join(author.name for author in author_ids)" class="font_2"/>
+                    <br/>
+                </t>
+                <t t-if="product.odoo_module_id">
+                    <t t-foreach="product.attribute_line_ids" t-as="attr">
+                        <span t-esc="' / '.join(value.name for value in attr.value_ids)" class="font_2"/>
+                    </t>
+                </t>
             </xpath>
             <xpath expr="//div[@class='product_price']//span[@t-esc='product.website_price']" position="replace">
-                <div itemprop="offers" itemscope="itemscope" itemtype="http://schema.org/Offer" class="product_price_hidden">
-                    <span t-esc="product.website_price" t-options="{'widget': 'monetary', 'display_currency': website.currency_id}" t-if="not product.odoo_module_id"/>
-                    <t t-if="product.odoo_module_id and product.product_variant_ids">
-                        <t t-set="author_ids" t-value="product.get_author_details()"/>
-                        <t t-foreach="author_ids" t-as="author">
-                            <span t-esc="author.name"/>
-                        </t>
-                        <br/>
-                    </t>
-                    <t t-if="product.odoo_module_id">
-                        <t t-foreach="product.attribute_line_ids" t-as="attr">
-                            <t t-foreach="attr.value_ids" t-as="value">
-                                <span t-esc="value.name"/>
-                            </t>
-                        </t>
-                    </t>
-                </div>
+                <span t-esc="product.website_price" t-options="{'widget': 'monetary', 'display_currency': website.currency_id}" t-if="not product.odoo_module_id"/>
             </xpath>
+
         </template>
 
         <!--Product Customization /-->
@@ -86,11 +87,18 @@
                 <strong t-field="variant_id.attribute_id.name" t-if="not product.odoo_module_id"/>
                 <strong t-if="product.odoo_module_id">Versions Available:</strong>
             </xpath>
+            <xpath expr="//ul[@class='list-unstyled']" position="attributes">
+                <attribute name="t-att-style">'margin-left: 0.1em;' if product.odoo_module_id else ''</attribute>
+            </xpath>
+
         </template>
 
         <template id="product" inherit_id="website_sale.product">
             <xpath expr="//t[@t-call='website_sale.variants']" position="before">
-                <p t-if="product.odoo_module_id" class="app_summary" t-esc="product.product_variant_ids[-1].app_summary"/>
+                <t t-if="product.odoo_module_id">
+                    <t t-set="product_var_id" t-value="product.get_version_info()"/>
+                </t>
+                <p t-if="product.odoo_module_id" class="app_summary" t-esc="product_var_id.app_summary"/>
             </xpath>
             <xpath expr="//t[@t-call='website_sale.product_price']" position="attributes">
                 <attribute name="t-if">not product.odoo_module_id</attribute>
@@ -133,7 +141,7 @@
                         <b>Technical Name: </b>
                     </div>
                     <div class="pull-right col-xs-8 set_row">
-                        <span class="tech_detail" t-esc="product.product_variant_ids[-1].odoo_module_version_id.name"/>
+                        <span class="tech_detail" t-esc="product_var_id.odoo_module_version_id.module_id.technical_name"/>
                     </div>
                 </div>
                 <div class="col-xs-12 set_row" t-if="product.odoo_module_id">
@@ -141,8 +149,8 @@
                         <b>License: </b>
                     </div>
                     <div class="pull-right col-xs-8 set_row">
-                        <a t-att-href="product.product_variant_ids[-1].app_license_id.website" class="license_url" target="_blank">
-                            <span class="license_detail" t-esc="product.product_variant_ids[-1].app_license_id.name"/>
+                        <a t-att-href="product_var_id.app_license_id.website" class="license_url" target="_blank">
+                            <span class="license_detail" t-esc="product_var_id.app_license_id.name"/>
                         </a>
                     </div>
                 </div>
@@ -151,7 +159,7 @@
                         <b>Author: </b>
                     </div>
                     <div class="pull-right col-xs-8 set_row">
-                        <span class="author_detail" t-esc="', '.join(author.name for author in product.product_variant_ids[-1].app_author_ids)"/>
+                        <span class="author_detail" t-esc="', '.join(author.name for author in product_var_id.app_author_ids)"/>
                     </div>
                 </div>
                 <div class="col-xs-12 set_row" t-if="product.odoo_module_id">
@@ -169,8 +177,8 @@
                         <b>Website: </b>
                     </div>
                     <div class="pull-right col-xs-8 set_row">
-                        <a t-att-href="product.product_variant_ids[-1].app_website" target="_blank">
-                            <span class="website_detail" t-esc="product.product_variant_ids[-1].app_website"/>
+                        <a t-att-href="product_var_id.app_website" target="_blank">
+                            <span class="website_detail" t-esc="product_var_id.app_website"/>
                         </a>
                     </div>
                 </div>
@@ -179,15 +187,15 @@
                         <b>Repository: </b>
                     </div>
                     <div class="pull-right col-xs-8 set_row">
-                        <a t-att-href="product.product_variant_ids[-1].app_github_url" target="_blank">
-                            <span class="repo_detail" t-esc="product.product_variant_ids[-1].app_github_url"/>
+                        <a t-att-href="product_var_id.app_github_url" target="_blank">
+                            <span class="repo_detail" t-esc="product_var_id.app_github_url"/>
                         </a>
                     </div>
                 </div>
             </xpath>
             <xpath expr="//section" position="inside">
                 <div class="desc_rst" t-if="product.odoo_module_id">
-                    <p t-esc="product.product_variant_ids[-1].app_description_rst_html" t-options='{"widget": "html"}'/>
+                    <p t-esc="product_var_id.app_description_rst_html" t-options='{"widget": "html"}'/>
                 </div>
             </xpath>
         </template>
