--- a/apps_product_creator/views/view_product_product.xml
+++ b/apps_product_creator/views/view_product_product.xml
@@ -8,7 +8,9 @@
         <field name="inherit_id" ref="product.product_normal_form_view"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
-                <page string="Module Informations" id="module_informations" attrs="{'invisible':[('odoo_module_version_id','=',False)]}">
+                <page string="Module Informations"
+                      id="module_informations"
+                      attrs="{'invisible':[('odoo_module_version_id','=',False)]}">
                     <group>
                         <group>
                             <field name="odoo_module_version_id"/>
