--- a/website_apps_store/views/assets.xml
+++ b/website_apps_store/views/assets.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
-        <template id="assets_frontend" name="Website Apps Store" inherit_id="website.assets_frontend">
+        <template id="assets_frontend" name="Website Apps Store"
+            inherit_id="website.assets_frontend">
             <xpath expr="." position="inside">
                 <link rel="stylesheet" href="/website_apps_store/static/src/css/style.css"/>
                 <script type="text/javascript" src="/website_apps_store/static/src/js/website_sale.js"></script>
