[FIX] Changes as per suggested

--- a/apps_download/views/product_template_view.xml
+++ b/apps_download/views/product_template_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    Copyright 2017 BizzAppDev - Ruchir Shukla <ruchir@bizzappdev.com>
-    Copyright 2017 AgentERP - Georg Notter <georg.notter@agenterp.com>
+    Copyright 2017-Today BizzAppDev - Ruchir Shukla <ruchir@bizzappdev.com>
+    Copyright 2017-Today AgentERP - Georg Notter <georg.notter@agenterp.com>
     License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl).
 -->
 <odoo>
