--- a/apps_download/views/product_template_view.xml
+++ b/apps_download/views/product_template_view.xml
@@ -12,10 +12,10 @@
             <field name="inherit_id" ref="product.product_normal_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//notebook" position="inside">
-                    <page string="Module Dependency">
-                        <separator string="Modules Dependency" colspan="4"/>
+                    <page string="Module Dependencies">
+                        <separator string="Modules Dependencies" colspan="4"/>
                         <field name="dependent_product_ids" colspan="4" nolabel="1"/>
-                        <button string="Get all Dependency" type="object" name="generate_zip_file"/>
+                        <button string="Get all Dependencies" type="object" name="generate_zip_file"/>
                         <field name="module_path"/>
                     </page>
                 </xpath>
