--- a/website_apps_store/views/assets.xml
+++ b/website_apps_store/views/assets.xml
@@ -5,6 +5,7 @@
             inherit_id="website.assets_frontend">
             <xpath expr="." position="inside">
                 <link rel="stylesheet" href="/website_apps_store/static/src/css/style.css"/>
+                <link rel="stylesheet" href="/website_apps_store/static/src/css/main.less"/>
                 <script type="text/javascript" src="/website_apps_store/static/src/js/website_sale.js"></script>
                 <script type="text/javascript" src="/website_apps_store/static/src/js/website_apps_store_tour.js"></script>
             </xpath>
